{
    "name": "TouchInputController",
    "maps": [
        {
            "name": "Touch",
            "id": "0aa2c41a-7fc6-417c-877b-d6e1f39d7b16",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "c62ad68b-0154-4a9a-b200-5b109f065ea1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "e8eaad6e-a61c-42ea-9375-c63e52c591cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "36dec1fb-a621-4c76-83d8-9c6b4cb21dbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaa1b614-f5c5-4c53-a73d-033bd1a67641",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "935edaed-3d2a-426f-a330-f62da510ebb7",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f300de71-267a-4e69-8ba9-8c718267fdef",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}